# grpc-exp

./: .gitignore  Makefile  README.md  pyproject.toml
protos/: algorithms.proto  exchange.proto
python/: algorithms_client.py  algorithms_pb2.py  algorithms_pb2_grpc.py  algorithms_server.py  client.py  exchange_pb2.py  exchange_pb2_grpc.py  server.py
