[tool.poetry]
name = "grpc-exp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.60.1"
grpcio-tools = "^1.60.1"
protobuf = "^4.25.2"
python-dotenv = "^1.0.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
